# trouble_audio

./: Cargo.toml  rust-toolchain
.helix/: config.toml
examples/apps/: Cargo.toml
examples/apps/src/: basic_audio_sink.rs  lib.rs
examples/rp-pico-w/: Cargo.toml
src/: ascs.rs  bap.rs  client.rs  generic_audio.rs  lib.rs  pacs.rs  server.rs
src/generic_audio/: capabilities.rs  configuration.rs  metadata.rs
src/pacs/: sink.rs  source.rs
trouble-audio/: Cargo.toml
trouble-audio/src/: ascs.rs  client.rs  generic_audio.rs  lib.rs  pacs.rs  server.rs
trouble-audio/src/generic_audio/: capabilities.rs  configuration.rs  metadata.rs
