[package]
name = "trouble_audio"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-sync = "0.6.1"
trouble-host = { version = "0.1.0", features = [
  "derive",
  "gatt",
  "peripheral",
  "central",
] }

lc3-codec = "0.2.0"

defmt = "0.3.10"
static_cell = "2.1.0"

[patch.crates-io]
trouble-host = { git = "https://github.com/embassy-rs/trouble.git" }
