[package]
name = "trouble_audio"
version = "0.1.0"
edition = "2021"

[features]
default = ["defmt"]
defmt = ["dep:defmt", "trouble-host/defmt"]

[dependencies]
embassy-sync = "0.6.1"
embassy-futures = "0.1.1"
embassy-time = "0.4.0"
bt-hci = "0.2.0"
trouble-host = { version = "0.1.0", features = [
  "derive",
  "gatt",
  "peripheral",
  "central",
  "scan",
] }

lc3-codec = "0.2.0"

defmt = { version = "0.3.10", optional = true }
static_cell = "2.1.0"
heapless = "0.8.0"

[patch.crates-io]
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", rev = "195b1a593a4f51ebc7ae61b5045c620a1dbd25d8" }
trouble-host = { git = "https://github.com/embassy-rs/trouble.git", rev = "7700932050221fa68a274fe713f7d1eb3d477ea2" }
