[package]
name = "trouble_audio"
version = "0.1.0"
edition = "2021"

[features]
default = ["defmt"]
defmt = ["dep:defmt", "trouble-host/defmt", "heapless/defmt-03"]

[dependencies]
embassy-sync = "0.6.1"
embassy-futures = "0.1.1"
embassy-time = "0.4.0"
bt-hci = "0.2.0"
trouble-host = { git = "https://github.com/embassy-rs/trouble.git", rev = "06dc8f13b8f564075f53f4e017cffedfc36dbec6", features = [
  "derive",
  "gatt",
  "peripheral",
  "central",
  "scan",
] }

lc3-codec = "0.2.0"

defmt = { version = "0.3.10", optional = true }
static_cell = "2.1.0"
heapless = "0.8.0"
bitflags = "2.8.0"
