[package]
name = "trouble-audio-example-apps"
version = "0.1.0"
edition = "2024"

[dependencies]
trouble-host = { git = "https://github.com/embassy-rs/trouble.git", rev = "06dc8f13b8f564075f53f4e017cffedfc36dbec6", features = [
  "derive",
  "scan",
] }
trouble_audio = { path = "../../trouble-audio" }
bt-hci = { version = "0.2" }
embassy-executor = { version = "0.7.0" }
embassy-futures = "0.1.1"
embassy-sync = { version = "0.6" }
embassy-time = "0.4"
embedded-hal = "1.0"
static_cell = "2"
embedded-io = "0.6"
heapless = "0.8"

defmt = { version = "0.3", optional = true }
log = { version = "0.4", optional = true }


[features]
defmt = [
  "dep:defmt",
  "trouble-host/defmt",
  "trouble_audio/defmt",
  "bt-hci/defmt",
  "embedded-io/defmt-03",
  "embedded-hal/defmt-03",
]
log = ["dep:log", "trouble-host/log", "bt-hci/log"]
